<resources>
    <string name="app_name">Basketball Scoreboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basketball_scoreboard">BASKETBALL SCOREBOARD</string>
    <string name="next">Next</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2points">+2 Points</string>
    <string name="point">Point</string>
    <string name="team">Team</string>
    <string name="free_throw">Free Throw</string>
    <string name="team2">Team2</string>
    <string name="point2">Point2</string>
    <string name="end_match">End Match</string>
    <string name="start_new_match">Start New Match</string>
</resources>